[tool.poetry]
name = "repl-nix-day-11-blackjack-capstone-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_day_11_blackjack_capstone_project"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
